# cursova_2curs

./: CMakeLists.txt  CMakeLists.txt.user.f9c9ed1  OS_CHECK.h  db_rc.qrc  diary2.db  fullinfo.cpp  fullinfo.h  fullinfo.ui  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myaxwidget.cpp  myaxwidget.h  readword.cpp  readword.h  readword.ui  readword2.cpp  readword2.h  viewfile.cpp  viewfile.h  viewfile.ui  zipmanage.cpp  zipmanage.h
